Removed useless ArrayLists and converted them to Lists