@@ -11,69 +11,68 @@ import it.polimi.ingsw.model.filter.Filter;
 import it.polimi.ingsw.model.filter.NumDifferentColorFilter;
 import it.polimi.ingsw.model.tile.TileVersion;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 public class Adjacency {
     public static void main(String[] args) {
         Bookshelf bookshelf = new Bookshelf();
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST),
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST),
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST)
-        )), 0);
+        ), 0);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST),
             Tile.getInstance(TileColor.BLUE, TileVersion.FIRST)
-        )), 0);
+        ), 0);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST),
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST),
             Tile.getInstance(TileColor.BLUE, TileVersion.FIRST)
-        )), 1);
+        ), 1);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.BLUE, TileVersion.FIRST),
             Tile.getInstance(TileColor.BLUE, TileVersion.FIRST),
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST)
-        )), 1);
+        ), 1);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.BLUE, TileVersion.FIRST),
             Tile.getInstance(TileColor.BLUE, TileVersion.FIRST),
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST)
-        )), 2);
+        ), 2);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST),
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST),
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST)
-        )), 2);
+        ), 2);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.WHITE, TileVersion.FIRST),
             Tile.getInstance(TileColor.WHITE, TileVersion.FIRST),
             Tile.getInstance(TileColor.WHITE, TileVersion.FIRST)
-        )), 3);
+        ), 3);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.WHITE, TileVersion.FIRST),
             Tile.getInstance(TileColor.CYAN, TileVersion.FIRST)
-        )), 3);
+        ), 3);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.MAGENTA, TileVersion.FIRST),
             Tile.getInstance(TileColor.MAGENTA, TileVersion.FIRST),
             Tile.getInstance(TileColor.CYAN, TileVersion.FIRST)
-        )), 4);
+        ), 4);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.CYAN, TileVersion.FIRST),
             Tile.getInstance(TileColor.CYAN, TileVersion.FIRST)
-        )), 4);
+        ), 4);
 
         Fetcher fetcher = new AdjacencyFetcher();
 
