@@ -12,70 +12,70 @@ import it.polimi.ingsw.model.filter.NumDifferentColorFilter;
 import it.polimi.ingsw.model.tile.TileVersion;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 public class Tetrominoes {
     public static void main(String[] args) {
         Bookshelf bookshelf = new Bookshelf();
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST),
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST),
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST)
-        )), 0);
+        ), 0);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST),
             Tile.getInstance(TileColor.BLUE, TileVersion.FIRST)
-        )), 0);
+        ), 0);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST),
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST),
             Tile.getInstance(TileColor.BLUE, TileVersion.FIRST)
-        )), 1);
+        ), 1);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST),
             Tile.getInstance(TileColor.BLUE, TileVersion.FIRST),
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST)
-        )), 1);
+        ), 1);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.BLUE, TileVersion.FIRST),
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST),
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST)
-        )), 2);
+        ), 2);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST),
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST),
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST)
-        )), 2);
+        ), 2);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.WHITE, TileVersion.FIRST),
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST),
             Tile.getInstance(TileColor.WHITE, TileVersion.FIRST)
-        )), 3);
+        ), 3);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST),
             Tile.getInstance(TileColor.CYAN, TileVersion.FIRST)
-        )), 3);
+        ), 3);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.WHITE, TileVersion.FIRST),
             Tile.getInstance(TileColor.GREEN, TileVersion.FIRST),
             Tile.getInstance(TileColor.WHITE, TileVersion.FIRST)
-        )), 4);
+        ), 4);
 
-        bookshelf.insertTiles(new ArrayList<>(Arrays.asList(
+        bookshelf.insertTiles(List.of(
             Tile.getInstance(TileColor.YELLOW, TileVersion.FIRST),
             Tile.getInstance(TileColor.CYAN, TileVersion.FIRST)
-        )), 4);
+        ), 4);
 
-        ArrayList<Fetcher> fetchers = new ArrayList<>();
+        List<Fetcher> fetchers = new ArrayList<>();
         for (Shape tetromino : Shape.TETROMINOES) {
             fetchers.add(new ShapeFetcher(tetromino));
         }
